decaf-parser/program3.output
Terminals unused in grammar

   VOID
   PRINT
   LC
   RC
   CLASS
   IF
   ELSE
   WHILE
   RETURN


State 1 conflicts: 1 shift/reduce
State 17 conflicts: 2 shift/reduce
State 23 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: %empty
    2      | assignment

    3 assignment: assignment element
    4           | element

    5 element: var_decl
    6        | expression

    7 name: THIS
    8     | ID
    9     | name DOT ID
   10     | name LS expression RS

   11 expression: name
   12           | NUMBER
   13           | NLL
   14           | READ LP RP
   15           | new_expression
   16           | PLUS expression
   17           | MINUS expression
   18           | NOT expression
   19           | expression EQUALS expression
   20           | expression NOTEQL expression
   21           | expression LESSGRT expression
   22           | expression MOREGRT expression
   23           | expression GREATER expression
   24           | expression LESS expression
   25           | expression PLUS expression
   26           | expression MINUS expression
   27           | expression OROR expression
   28           | expression MULT expression
   29           | expression DIV expression
   30           | expression REMAINDER expression
   31           | expression ANDAND expression
   32           | LP expression RP

   33 new_expression: NEW ID LP RP
   34               | NEW ID exprsn_in_brackets empty_exp_in_brackets

   35 exprsn_in_brackets: %empty
   36                   | exprsn_in_brackets LS expression RS

   37 empty_exp_in_brackets: %empty
   38                      | LS RS empty_exp_in_brackets

   39 var_decl: type ID SEMICOLON
   40         | type ID error
   41         | type error SEMICOLON

   42 type: simple_type
   43     | type LS RS
   44     | error LS RS
   45     | type error RS
   46     | type LS error

   47 simple_type: INT
   48            | error


Terminals, with rules where they appear

$end (0) 0
error (256) 40 41 44 45 46 48
NLL (258) 13
THIS (259) 7
VOID (260)
NEW (261) 33 34
READ (262) 14
PRINT (263)
LC (264)
LS (265) 10 36 38 43 44 46
LP (266) 14 32 33
RC (267)
RP (268) 14 32 33
RS (269) 10 36 38 43 44 45
CLASS (270)
IF (271)
ELSE (272)
WHILE (273)
RETURN (274)
DOT (275) 9
SEMICOLON (276) 39 41
INT (277) 47
ID (278) 8 9 33 34 39 40
NUMBER (279) 12
EQUALS (280) 19
NOTEQL (281) 20
LESSGRT (282) 21
MOREGRT (283) 22
GREATER (284) 23
LESS (285) 24
PLUS (286) 16 25
MINUS (287) 17 26
OROR (288) 27
MULT (289) 28
DIV (290) 29
REMAINDER (291) 30
ANDAND (292) 31
NOT (293) 18


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
start (40)
    on left: 1 2, on right: 0
assignment (41)
    on left: 3 4, on right: 2 3
element (42)
    on left: 5 6, on right: 3 4
name (43)
    on left: 7 8 9 10, on right: 9 10 11
expression (44)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
    29 30 31 32, on right: 6 10 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 36
new_expression (45)
    on left: 33 34, on right: 15
exprsn_in_brackets (46)
    on left: 35 36, on right: 34 36
empty_exp_in_brackets (47)
    on left: 37 38, on right: 34 38
var_decl (48)
    on left: 39 40 41, on right: 5
type (49)
    on left: 42 43 44 45 46, on right: 39 40 41 43 45 46
simple_type (50)
    on left: 47 48, on right: 42


State 0

    0 $accept: . start $end

    error   shift, and go to state 1
    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    INT     shift, and go to state 7
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    $end  reduce using rule 1 (start)

    start           go to state 13
    assignment      go to state 14
    element         go to state 15
    name            go to state 16
    expression      go to state 17
    new_expression  go to state 18
    var_decl        go to state 19
    type            go to state 20
    simple_type     go to state 21


State 1

   44 type: error . LS RS
   48 simple_type: error .

    LS  shift, and go to state 22

    LS        [reduce using rule 48 (simple_type)]
    $default  reduce using rule 48 (simple_type)


State 2

   13 expression: NLL .

    $default  reduce using rule 13 (expression)


State 3

    7 name: THIS .

    $default  reduce using rule 7 (name)


State 4

   33 new_expression: NEW . ID LP RP
   34               | NEW . ID exprsn_in_brackets empty_exp_in_brackets

    ID  shift, and go to state 23


State 5

   14 expression: READ . LP RP

    LP  shift, and go to state 24


State 6

   32 expression: LP . expression RP

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 25
    new_expression  go to state 18


State 7

   47 simple_type: INT .

    $default  reduce using rule 47 (simple_type)


State 8

    8 name: ID .

    $default  reduce using rule 8 (name)


State 9

   12 expression: NUMBER .

    $default  reduce using rule 12 (expression)


State 10

   16 expression: PLUS . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 26
    new_expression  go to state 18


State 11

   17 expression: MINUS . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 27
    new_expression  go to state 18


State 12

   18 expression: NOT . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 28
    new_expression  go to state 18


State 13

    0 $accept: start . $end

    $end  shift, and go to state 29


State 14

    2 start: assignment .
    3 assignment: assignment . element

    error   shift, and go to state 1
    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    INT     shift, and go to state 7
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    $end  reduce using rule 2 (start)

    element         go to state 30
    name            go to state 16
    expression      go to state 17
    new_expression  go to state 18
    var_decl        go to state 19
    type            go to state 20
    simple_type     go to state 21


State 15

    4 assignment: element .

    $default  reduce using rule 4 (assignment)


State 16

    9 name: name . DOT ID
   10     | name . LS expression RS
   11 expression: name .

    LS   shift, and go to state 31
    DOT  shift, and go to state 32

    $default  reduce using rule 11 (expression)


State 17

    6 element: expression .
   19 expression: expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    EQUALS     shift, and go to state 33
    NOTEQL     shift, and go to state 34
    LESSGRT    shift, and go to state 35
    MOREGRT    shift, and go to state 36
    GREATER    shift, and go to state 37
    LESS       shift, and go to state 38
    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    OROR       shift, and go to state 41
    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45

    PLUS      [reduce using rule 6 (element)]
    MINUS     [reduce using rule 6 (element)]
    $default  reduce using rule 6 (element)


State 18

   15 expression: new_expression .

    $default  reduce using rule 15 (expression)


State 19

    5 element: var_decl .

    $default  reduce using rule 5 (element)


State 20

   39 var_decl: type . ID SEMICOLON
   40         | type . ID error
   41         | type . error SEMICOLON
   43 type: type . LS RS
   45     | type . error RS
   46     | type . LS error

    error  shift, and go to state 46
    LS     shift, and go to state 47
    ID     shift, and go to state 48


State 21

   42 type: simple_type .

    $default  reduce using rule 42 (type)


State 22

   44 type: error LS . RS

    RS  shift, and go to state 49


State 23

   33 new_expression: NEW ID . LP RP
   34               | NEW ID . exprsn_in_brackets empty_exp_in_brackets

    LP  shift, and go to state 50

    LP        [reduce using rule 35 (exprsn_in_brackets)]
    $default  reduce using rule 35 (exprsn_in_brackets)

    exprsn_in_brackets  go to state 51


State 24

   14 expression: READ LP . RP

    RP  shift, and go to state 52


State 25

   19 expression: expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression
   32           | LP expression . RP

    RP         shift, and go to state 53
    EQUALS     shift, and go to state 33
    NOTEQL     shift, and go to state 34
    LESSGRT    shift, and go to state 35
    MOREGRT    shift, and go to state 36
    GREATER    shift, and go to state 37
    LESS       shift, and go to state 38
    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    OROR       shift, and go to state 41
    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45


State 26

   16 expression: PLUS expression .
   19           | expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45

    $default  reduce using rule 16 (expression)


State 27

   17 expression: MINUS expression .
   19           | expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45

    $default  reduce using rule 17 (expression)


State 28

   18 expression: NOT expression .
   19           | expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    $default  reduce using rule 18 (expression)


State 29

    0 $accept: start $end .

    $default  accept


State 30

    3 assignment: assignment element .

    $default  reduce using rule 3 (assignment)


State 31

   10 name: name LS . expression RS

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 54
    new_expression  go to state 18


State 32

    9 name: name DOT . ID

    ID  shift, and go to state 55


State 33

   19 expression: expression EQUALS . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 56
    new_expression  go to state 18


State 34

   20 expression: expression NOTEQL . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 57
    new_expression  go to state 18


State 35

   21 expression: expression LESSGRT . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 58
    new_expression  go to state 18


State 36

   22 expression: expression MOREGRT . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 59
    new_expression  go to state 18


State 37

   23 expression: expression GREATER . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 60
    new_expression  go to state 18


State 38

   24 expression: expression LESS . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 61
    new_expression  go to state 18


State 39

   25 expression: expression PLUS . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 62
    new_expression  go to state 18


State 40

   26 expression: expression MINUS . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 63
    new_expression  go to state 18


State 41

   27 expression: expression OROR . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 64
    new_expression  go to state 18


State 42

   28 expression: expression MULT . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 65
    new_expression  go to state 18


State 43

   29 expression: expression DIV . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 66
    new_expression  go to state 18


State 44

   30 expression: expression REMAINDER . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 67
    new_expression  go to state 18


State 45

   31 expression: expression ANDAND . expression

    NLL     shift, and go to state 2
    THIS    shift, and go to state 3
    NEW     shift, and go to state 4
    READ    shift, and go to state 5
    LP      shift, and go to state 6
    ID      shift, and go to state 8
    NUMBER  shift, and go to state 9
    PLUS    shift, and go to state 10
    MINUS   shift, and go to state 11
    NOT     shift, and go to state 12

    name            go to state 16
    expression      go to state 68
    new_expression  go to state 18


State 46

   41 var_decl: type error . SEMICOLON
   45 type: type error . RS

    RS         shift, and go to state 69
    SEMICOLON  shift, and go to state 70


State 47

   43 type: type LS . RS
   46     | type LS . error

    error  shift, and go to state 71
    RS     shift, and go to state 72


State 48

   39 var_decl: type ID . SEMICOLON
   40         | type ID . error

    error      shift, and go to state 73
    SEMICOLON  shift, and go to state 74


State 49

   44 type: error LS RS .

    $default  reduce using rule 44 (type)


State 50

   33 new_expression: NEW ID LP . RP

    RP  shift, and go to state 75


State 51

   34 new_expression: NEW ID exprsn_in_brackets . empty_exp_in_brackets
   36 exprsn_in_brackets: exprsn_in_brackets . LS expression RS

    LS  shift, and go to state 76

    $default  reduce using rule 37 (empty_exp_in_brackets)

    empty_exp_in_brackets  go to state 77


State 52

   14 expression: READ LP RP .

    $default  reduce using rule 14 (expression)


State 53

   32 expression: LP expression RP .

    $default  reduce using rule 32 (expression)


State 54

   10 name: name LS expression . RS
   19 expression: expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    RS         shift, and go to state 78
    EQUALS     shift, and go to state 33
    NOTEQL     shift, and go to state 34
    LESSGRT    shift, and go to state 35
    MOREGRT    shift, and go to state 36
    GREATER    shift, and go to state 37
    LESS       shift, and go to state 38
    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    OROR       shift, and go to state 41
    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45


State 55

    9 name: name DOT ID .

    $default  reduce using rule 9 (name)


State 56

   19 expression: expression . EQUALS expression
   19           | expression EQUALS expression .
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    OROR       shift, and go to state 41
    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45

    $default  reduce using rule 19 (expression)


State 57

   19 expression: expression . EQUALS expression
   20           | expression . NOTEQL expression
   20           | expression NOTEQL expression .
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    OROR       shift, and go to state 41
    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45

    $default  reduce using rule 20 (expression)


State 58

   19 expression: expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   21           | expression LESSGRT expression .
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    OROR       shift, and go to state 41
    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45

    $default  reduce using rule 21 (expression)


State 59

   19 expression: expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   22           | expression MOREGRT expression .
   23           | expression . GREATER expression
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    OROR       shift, and go to state 41
    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45

    $default  reduce using rule 22 (expression)


State 60

   19 expression: expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   23           | expression GREATER expression .
   24           | expression . LESS expression
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression

    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    OROR       shift, and go to state 41
    MULT       shift, and go to state 42
    DIV        shift, and go to state 43
    REMAINDER  shift, and go to state 44
    ANDAND     shift, and go to state 45

    $default  reduce using rule 23 (expression)


State 61

   19 expression: expression . EQUALS expression
   20           | expression . NOTEQL expression
   21           | expression . LESSGRT expression
   22           | expression . MOREGRT expression
   23           | expression . GREATER expression
   24           | expression . LESS expression
   24           | expression LESS expression .
   25           | expression . PLUS expression
   26           | expression . MINUS expression
   27           | expression . OROR expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . REMAINDER expression
   31           | expression . ANDAND expression
